--- a/app/src/main/res/layout/menu_layout.xml
+++ b/app/src/main/res/layout/menu_layout.xml
@@ -58,6 +58,7 @@
         android:gravity="center"
         android:text="Menu"
         android:textSize="12sp"
+        android:textColor="@color/profileIntro"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
