--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="careerBack">#372f41</color>
     <color name="careerPrimaryColor">#e8e5ec</color>
     <color name="careerSecondaryColor">#a19ba8</color>
+    <color name="off_white">#e7e8e9</color>
     <color name="careerCardColor">#2c2535</color>
     <color name="progressTextColor">#CDDC39</color>
 </resources>
